SDIT-1808: 🎨 Rename mocking of auth user token