@@ -14,6 +14,7 @@ import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.reactive.server.WebTestClient;
+import uk.gov.justice.hmpps.kotlin.auth.AuthSource;
 import uk.gov.justice.hmpps.prison.PrisonApiServer;
 import uk.gov.justice.hmpps.prison.executablespecification.steps.AuthTokenHelper;
 import uk.gov.justice.hmpps.prison.executablespecification.steps.AuthTokenHelper.AuthToken;
@@ -110,14 +111,7 @@ public abstract class ResourceTest {
     }
 
     protected String validToken() {
-        return jwtAuthenticationHelper.createJwt(
-                JwtParameters.builder()
-                        .username("ITAG_USER")
-                        .scope(List.of("read", "write"))
-                        .roles(List.of())
-                        .expiryTime(Duration.ofDays(365 * 10))
-                        .build()
-        );
+        return validToken(Collections.emptyList());
     }
 
     protected String validToken(final List<String> roles) {
@@ -126,6 +120,7 @@ public abstract class ResourceTest {
                         .username("ITAG_USER")
                         .scope(List.of("read", "write"))
                         .roles(roles)
+                        .authSource(AuthSource.NOMIS)
                         .expiryTime(Duration.ofDays(365 * 10))
                         .build()
         );
@@ -137,6 +132,7 @@ public abstract class ResourceTest {
                         .username("ITAG_USER")
                         .scope(List.of("read"))
                         .roles(List.of())
+                        .authSource(AuthSource.NOMIS)
                         .expiryTime(Duration.ofDays(365 * 10))
                         .build()
         );
@@ -148,6 +144,7 @@ public abstract class ResourceTest {
                 .clientId("api-client-id")
                 .scope(List.of("read", "write"))
                 .roles(roles)
+                .authSource(AuthSource.NONE)
                 .expiryTime(Duration.ofDays(365 * 10))
                 .build()
         );
